# web-crawler

./: Cargo.toml  README.md  links.json
src/: constants.rs  fetch_links.rs  main.rs  types.rs  utils.rs
