[package]
name = "web-crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.3", features = ["v4"] }
scraper = "0.23.1"
select = "0.5"
serde_json = "1.0.140"
chrono = "0.4.40"
headless_chrome = "1.0.17"
